cmake_minimum_required(VERSION 3.22)
project(C__Programms)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Programms
        .idea/.gitignore
        .idea/C__Programms.iml
        .idea/modules.xml
        .idea/workspace.xml
        .vscode/c_cpp_properties.json
        .vscode/launch.json
        .vscode/settings.json
        C_Programms.code-workspace
        FFT8.c
        FFT8.exe
        FFT_DMA_LAB_11.c
        linked_represented_binary_tree.cpp
        CO.c
        )
